2010-09-18  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gpanedgroup.R: bug fix in svalue() method

2010-08-08  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gnotebook.R: added [ method to get children


2010-08-01  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gcalendar.R: added calendar selector

2010-07-26  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtree.R (.treeColWidths): added svalue<- method to set by index

2010-07-25  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/glayout.R: fix so that [ method can be used to retrieve widget
	at i,j

2010-07-24  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aaaHandlers.R: reimplemented this so that block/unblock work;
	others work as advertised, fix bug along the way

2010-07-16  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtable.R (.computeWidths): Trying to fix size of table object

2010-07-05  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gedit.R: put in fix to handle NA values -- which were not
	handled gracefully. Use <NA> string to represent NA

	* R/gframe.R: was using old means to handle expand,
	... arguments. Changed as this caused issues when using layouts.

	* R/ggroup.R: put default borderwidth to 0 -- was 10 for some
	reason which was too much space

2010-06-29  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gfile.R: bug fix; new initialdir argument (hidden) 

2010-06-14  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtable.R (.computeWidths): removed autoscroll call - caused
	issues with initial drawing of screen. Also in gtext.

2010-05-28  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gdroplist.R: svalue(obj, index=TRUE) <- -1 should work now (no
	value set)

2010-05-27  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gedit.R: added visible<- method
