@@ -4,6 +4,7 @@ NEWS for gWidgetstcltk
 
 Changes for 0.0-40
 -------------------
+* bug fix for add method and fill argument
 * Added calendar selector to gcalendar
 * add [ method for gnotebook, kill [<- (wasn't working, isn't right)
 
